trying to grab uploaded file to embed

--- a/prototype/templates/search.html
+++ b/prototype/templates/search.html
@@ -37,7 +37,7 @@
     <!--
     file upload
 -->
-    <form action="/action_page.php">
+    <form action="/action_page.php", method="post">
         <input type="file" id="myFile" name="filename">
         <input type="submit">
     </form>
