--- a/src/pages/fileUpload.css
+++ b/src/pages/fileUpload.css
@@ -11,8 +11,12 @@
     background-color: #4b0082; 
     padding: 20px;
     text-align: center;
-    color: white; /* Text color */
+    color: white;
+    border: 2px solid black; 
+    border-radius: 8px; 
 }
+
+
 
 .background-image {
     position: absolute;
@@ -20,20 +24,13 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://images.unsplash.com/photo-1535408190508-be4c21946da6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); 
+    background-image: url('https://as1.ftcdn.net/v2/jpg/07/09/99/14/1000_F_709991427_RKOkVz4jtaLq8EEoLPFpCaSWY5s6wUwV.jpg'); 
     background-size: cover;
     background-position: center;
-    opacity: 1; /* Full opacity */
+    opacity: 2; 
     z-index: -1; 
 }
 
-.app-content {
-    margin-top: 20px;
-    padding: 20px;
-    background-color: #6a5acd; 
-    border-radius: 8px;
-    border: 2px solid black; 
-}
 
 .file-info {
     margin-top: 10px;
