--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -8,16 +8,6 @@
     background-position: center;
 }
 
-.background-image {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-size: 120%; 
-    filter: brightness(0.5); 
-}
-
 .content {
     z-index: 1;
     text-align: center;
@@ -34,4 +24,16 @@
     max-width: 800px;
     margin: 0 auto;
     padding: 0 20px;
+}
+
+
+.orange-box {
+    position: absolute;
+    top: 50%; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(166, 25, 226, 0.759);
+    padding: 20px;
+    border: 2px solid black;
+    border-radius: 10px;
 }
