--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -10,19 +10,19 @@
 }
 
 /* .content-box {
-    background-color: rgba(255, 255, 255, 1); 
+    background-color: rgba(84, 46, 252, 0.797);
     padding: 20px;
+    border: 2px solid black; 
     border-radius: 8px;
-    border: 2px solid rgba(255, 255, 255, 0.7);
 } */
 
 .title {
-    font-size: 3rem;
+    font-size: 4rem; /* Increase font size */
     margin-bottom: 20px;
 }
 
 .description {
-    font-size: 2rem;
+    font-size: 2.5rem; /* Increase font size */
     max-width: 800px;
     margin: 0 auto;
     padding: 0 20px;
