--- a/src/pages/fileUpload.css
+++ b/src/pages/fileUpload.css
@@ -8,7 +8,7 @@
 }
 
 .app-header {
-    background-color: #4b0082; 
+    background-color: #7b08ceb6; 
     padding: 20px;
     text-align: center;
     color: white;
@@ -24,10 +24,11 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: url('https://as1.ftcdn.net/v2/jpg/07/09/99/14/1000_F_709991427_RKOkVz4jtaLq8EEoLPFpCaSWY5s6wUwV.jpg'); 
+    //background-image: url('https://images.unsplash.com/photo-1535408190508-be4c21946da6?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+    background-image: url('https://images.unsplash.com/photo-1700995781186-1ffdac2d552e?q=80&w=1984&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
     background-size: cover;
     background-position: center;
-    opacity: 2; 
+    opacity: .8; 
     z-index: -1; 
 }
 
