--- a/src/pages/searchBar.css
+++ b/src/pages/searchBar.css
@@ -1,56 +1,14 @@
-.grid-item img {
-  width: 100%;
-  height: 200px; 
-  object-fit: cover; 
-}
-
 .grid-container {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  gap: 10px;
-  margin-top: 20px; 
-}
-
-.loading-spinner {
-  border: 8px solid #f3f3f3;
-  border-top: 8px solid #3498db;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  animation: spin 1s linear infinite;
-  margin-top: 20px;
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-.grid-item {
-  cursor: pointer;
-  /* border: 2px solid black; */
-}
-
-
-.expanded-image-viewer {
-  display: flex;
-  flex-direction: column; 
-  justify-content: center;
-  align-items: center;
-  cursor: pointer;
-  margin-top: 20px;
-}
-
-
-.expanded-image-viewer img {
-  width: 600px; 
-  height: 400px; 
-  object-fit: contain; 
- 
-}
-.caption-text {
-  color: white;
-  text-align: center;
-  margin-top: 20px;
-}
-
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); 
+    gap: 10px; 
+  }
+  
+  .grid-item img {
+    width: 100%; 
+    height: 200px;
+    object-fit: cover;
+    /* object-fit: contain; */
+    border: 2px solid black;
+  }
+  
