Made the necessary changes to the web pages and now upload them

--- a/src/pages/fileUpload.css
+++ b/src/pages/fileUpload.css
@@ -29,8 +29,12 @@
     background-position: center;
     opacity: .8; 
     z-index: -1; 
+    
 }
 
+.app-content {
+    margin-top: 20px;
+}
 
 .file-info {
     margin-top: 10px;
