--- a/src/pages/fileUpload.css
+++ b/src/pages/fileUpload.css
@@ -54,4 +54,41 @@ input[type="file"]:hover {
     background-color: #8a2be2; 
 }
 
-  
+
+.text-input {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    padding: 10px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    width: 80%;
+}
+
+
+/* .error-message {
+    color: rgb(254, 249, 249);
+    margin-top: 10px;
+} */
+
+.error-message {
+    color: rgb(250, 247, 247);
+    margin-top: 10px;
+    padding: 10px; 
+    background-color: #7b08ceb6; 
+    border: 1px solid black; 
+    border-radius: 5px; 
+}
+
+.upload-button {
+    margin-top: 10px;
+    background-color: #9370DB; 
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.upload-button:hover {
+    background-color: #8A2BE2;
+}
