--- a/src/pages/fileUpload.css
+++ b/src/pages/fileUpload.css
@@ -17,7 +17,6 @@
 }
 
 
-
 .background-image {
     position: absolute;
     top: 0;
@@ -41,18 +40,59 @@
 }
 
 input[type="file"] {
-    background-color: #9370db; 
+    width: 400px; 
+    height: auto; /* Adjusted for dynamic height */
+    min-height: 100px; /* Minimum height to maintain consistent appearance */
+    background-color:rgba(255, 255, 255, 0.4); 
     border: 2px solid black; 
     border-radius: 6px;
     padding: 10px;
-    color: white; 
+    color: transparent; /* Hide the default text */ 
     font-size: 16px;
     cursor: pointer;
+    margin-bottom: 10px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden; /* Hide the file name */
 }
 
 input[type="file"]:hover {
-    background-color: #8a2be2; 
+    background-color:rgba(255, 255, 255, 0.4); 
 }
+
+
+input[type="file"]::before {
+    content: "";
+    background-image: url('https://cdn.iconscout.com/icon/free/png-256/free-upload-486921-2364990.png');
+    background-size: contain; 
+    background-repeat: no-repeat;
+    width: 60px;
+    height: 60px; 
+    display: inline-block;
+    position: relative;
+    top: 30px; 
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+input[type="file"]::after {
+    content: " Drag And Drop A File Here";
+    font-size: 16px;
+    color: rgb(0, 0, 0);
+    text-align: center;
+    display: block;
+    position: relative; 
+    top: -15px; 
+}
+
+
+input[type="file"]::-webkit-file-upload-button {
+    visibility: hidden;
+}
+
 
 
 .text-input {
