--- a/src/pages/About.css
+++ b/src/pages/About.css
@@ -40,6 +40,10 @@ p {
     padding: 0 20px;
 }
 
+.top-workers {
+    margin-top: 20px;
+}
+
 .worker {
     display: inline-block;
     vertical-align: top;
